internal/controller/testdata/zwh-ingress-cr.yaml
apiVersion: apps.zwh.com/v1
kind: ZwhDeployment
metadata:
  name: zwhdeployment-test
spec:
  image: nginx
  port: 80
  replicas: 2
  expose:
    mode: ingress
    ingressDomain: www.zhangwenhao-test.com
