internal/controller/testdata/zwh-ingress-ingress-expect.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zwhdeployment-test
spec:
  ingressClassName: nginx
  rules:
    - host: www.zhangwenhao-test.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: zwhdeployment-test
                port:
                  number: 80
