internal/controller/testdata/zwh-ingress-service-expect.yaml
apiVersion: v1
kind: Service
metadata:
  name: zwhdeployment-test
spec:
  selector:
    app: zwhdeployment-test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
