internal/controller/testdata/zwh-nodeport-service-expect.yaml
apiVersion: v1
kind: Service
metadata:
  name: zwhdeployment-test
spec:
  type: NodePort
  selector:
    app: zwhdeployment-test
  ports:
    - port: 80
      targetPort: 80
      nodePort: 8080
